@@ -1,45 +1,17 @@
 package trivia;
 
-import trivia.Categories.Categorie;
-
 import java.util.ArrayList;
 
-// REFACTOR ME
 public class Game implements IGame {
-    
-//    enum Categories {
-//
-//        POP("Pop"),
-//        SCIENCE("Science"),
-//        SPORTS("Sports"),
-//        ROCK("Rock");
-//
-//        private final String nomCategorie;
-//
-//        Categories(final String string) {
-//            nomCategorie = string;
-//        }
-//
-//        public String toString() {
-//            return nomCategorie;
-//        }
-//    }
-    
-    private final String POP = "Pop";
-    private final String ROCK = "Rock";
-    private final String SCIENCE = "Science";
-    private final String SPORTS = "Sports";
-    String[] nomCategories = new String[] {POP, ROCK, SCIENCE, SPORTS};
-    
-    private ArrayList<Player> players = new ArrayList<>();
-    private ArrayList<Categorie> categories = new ArrayList<>();
-    
 
+    private final CategoryEnum[] categoriesEnum = CategoryEnum.values();
+    private ArrayList<Player> players = new ArrayList<>();
+    private ArrayList<Category> categories = new ArrayList<>();
     Player currentPlayer;
 
     public Game() {
-        for (String category : nomCategories) {
-            this.categories.add(new Categorie(category, "./src/main/java/trivia/FichiersQuestions/" + category + ".txt", new ArrayList<>()));
+        for (CategoryEnum category : categoriesEnum) {
+            this.categories.add(new Category(category.getName(), "./src/main/java/trivia/FichiersQuestions/" + category.getName() + ".txt"));
         }
     }
 
@@ -53,7 +25,7 @@ public class Game implements IGame {
         if (playerAdded) {
             System.out.println(playerName + " was added");
             System.out.println("They are player number " + players.size());
-            currentPlayer = players.get(0);
+            currentPlayer = players.getFirst();
             return true;
         } else {
             System.out.println("Player was not added");
@@ -70,23 +42,18 @@ public class Game implements IGame {
                 currentPlayer.setInPenaltyBox(false);
                 System.out.println(currentPlayer + " is getting out of the penalty box");
                 forwardPlayer(roll);
-                System.out.println(currentPlayer
-                        + "'s new location is "
-                        + currentPlayer.getPosition());
-                System.out.println("The category is " + currentCategory());
+                System.out.println(currentPlayer + "'s new location is " + currentPlayer.getPosition());
+                System.out.println("The category is " + currentCategory().getName());
                 askQuestion();
             } else {
                 System.out.println(currentPlayer + " is not getting out of the penalty box");
             }
         } else {
             forwardPlayer(roll);
-            System.out.println(currentPlayer
-                    + "'s new location is "
-                    + currentPlayer.getPosition());
-            System.out.println("The category is " + currentCategory());
+            System.out.println(currentPlayer + "'s new location is " + currentPlayer.getPosition());
+            System.out.println("The category is " + currentCategory().getName());
             askQuestion();
         }
-
     }
 
     private static boolean canEscapeFromJail(int roll) {
@@ -94,44 +61,31 @@ public class Game implements IGame {
     }
 
     private void askQuestion() {
-        Categorie categorie = getCategorie(currentCategory());
-	    if (categorie != null) {
-		    System.out.println(categorie.removeFirstQuestion());
-	    } else {
-            System.out.println("error, question : " + currentCategory() + " not found");
+        Category category = getCategorie(currentCategory().getName());
+        if (category != null) {
+            System.out.println(category.removeFirstQuestion());
+        } else {
+            System.out.println("Error, question: " + currentCategory().getName() + " not found");
         }
     }
-    
-    public Categorie getCategorie(String nomCategorie) {
-        for (Categorie categorieCourante : categories) {
-            if(categorieCourante.getNomCategorie().equals(nomCategorie))
-                return categorieCourante;
+
+    public Category getCategorie(String nomCategorie) {
+        for (Category categoryCourante : categories) {
+            if (categoryCourante.getName().equals(nomCategorie))
+                return categoryCourante;
         }
         return null;
     }
 
-
-    private String currentCategory() {
-        if (currentPlayer.getPosition() == 1) return "Pop";
-        if (currentPlayer.getPosition() == 5) return "Pop";
-        if (currentPlayer.getPosition() == 9) return "Pop";
-        if (currentPlayer.getPosition() == 2) return "Science";
-        if (currentPlayer.getPosition() == 6) return "Science";
-        if (currentPlayer.getPosition() == 10) return "Science";
-        if (currentPlayer.getPosition() == 3) return "Sports";
-        if (currentPlayer.getPosition() == 7) return "Sports";
-        if (currentPlayer.getPosition() == 11) return "Sports";
-        return "Rock";
+    private CategoryEnum currentCategory() {
+        return categoriesEnum[(currentPlayer.getPosition() - 1) % categoriesEnum.length];
     }
 
     public boolean handleCorrectAnswer() {
         if (!currentPlayer.isInPenaltyBox()) {
             System.out.println("Answer was correct!!!!");
             currentPlayer.addPurse();
-            System.out.println(currentPlayer.getName()
-                    + " now has "
-                    + currentPlayer.getPurses()
-                    + " Gold Coins.");
+            System.out.println(currentPlayer.getName() + " now has " + currentPlayer.getPurses() + " Gold Coins.");
         }
         boolean win = didPlayerWin();
         selectNextPlayer();
@@ -145,7 +99,6 @@ public class Game implements IGame {
         selectNextPlayer();
         return true;
     }
-
 
     private boolean didPlayerWin() {
         return currentPlayer.getPurses() >= 6;
